# ghc-lib-parser-ex

./: .gitignore  .hlint.yaml  .weeder.yaml  CI.hs  ChangeLog.md  LICENSE  README.md  azure-pipelines.yml  ghc-lib-parser-ex-runhaskell.sh  ghc-lib-parser-ex.cabal  stack-0.20200102.yaml  stack-8.8.1.20191204.yaml  stack-8.8.2.yaml  stack-808-808-ghc-lib.yaml  stack-808-808-no-ghc-lib.yaml  stack-810-808-ghc-lib.yaml  stack-810-808-no-ghc-lib.yaml  stack-810-808.yaml  stack-901-808.yaml  stack-902-8107.yaml  stack-902.yaml  stack-921-8104.yaml  stack-921-901-ghc-lib.yaml  stack-921-901-no-ghc-lib.yaml  stack-922-8104.yaml  stack-923-8104.yaml  stack-941-8107.yaml  stack-943-902.yaml  stack-da-8.8.1.20191204.yaml  stack-da-8.8.1.20200122.yaml  stack-exact.yaml  stack-head.yaml  stack.yaml
.github/workflows/: ghc-lib-parser-ex-ghc-lib-parser-8.8.1.20191204.yml  ghc-lib-parser-ex-ghc-lib-parser-9.0.2.20211226.yml  ghc-lib-parser-ex-ghc-lib-parser-9.10.1.20240511.yml  ghc-lib-parser-ex-ghc-lib-parser-9.12.2.20250320.yml  ghc-lib-parser-ex-ghc-lib-parser-9.2.8.20230729.yml  ghc-lib-parser-ex-ghc-lib-parser-9.4.8.20231111.yml  ghc-lib-parser-ex-ghc-lib-parser-9.6.6.20240701.yml  ghc-lib-parser-ex-ghc-lib-parser-9.8.2.20240223.yml  hlint-check.yml  main.yml  ormolu-check.yml
cbits/: ghclib_api.h
src/Compat/GHC/: Hs.hs
src/Language/Haskell/GhclibParserEx/: Config.hs  Dump.hs  DynFlags.hs  Fixity.hs  Outputable.hs  Parse.hs  Parser.hs
src/Language/Haskell/GhclibParserEx/GHC/: Hs.hs  Parser.hs
stack-yaml/: stack-0.20200401.yaml  stack-8.8.1.20191204.yaml  stack-8107-882.yaml  stack-884-865.yaml  stack-902-8107.yaml  stack-922-8104.yaml  stack-923-8104.yaml  stack-924-8104.yaml  stack-925-902.yaml  stack-926-902.yaml  stack-941-8107.yaml  stack-941-902.yaml  stack-942-902.yaml  stack-944-902.yaml  stack-948-902.yaml  stack-961-927.yaml  stack-962-927.yaml  stack-964-927.yaml  stack-da-8.8.1.20200122.yaml
test/: Test.hs
(+15 files in other folders)
