cabal-version: >= 1.18
name:           ghc-lib-parser-ex
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/shayne-fletcher/ghc-lib-parser-ex#readme>
homepage:       https://github.com/shayne-fletcher/ghc-lib-parser-ex#readme
bug-reports:    https://github.com/shayne-fletcher/ghc-lib-parser-ex/issues
author:         Shayne Fletcher
maintainer:     shayne@shaynefletcher.org
copyright:      Copyright © 2020, Shayne Fletcher. All rights reserved.
license:        BSD3
license-file:   LICENSE
category:       Development
synopsis:       Algorithms on GHC parse trees
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/shayne-fletcher/ghc-lib-parser-ex

flag ghc-lib
  default: False
  manual: True
  description: Force dependency on ghc-lib-parser even if GHC API in the ghc package is supported

library
  exposed-modules:
      Lib
  other-modules:
      Paths_ghc_lib_parser_ex
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  if !flag(ghc-lib) && impl(ghc >= 8.8.0) && impl(ghc < 8.9.0)
      build-depends:
        ghc == 8.8.*,
        ghc-boot-th
  else
      build-depends:
        ghc-lib-parser

  default-language: Haskell2010

executable ghc-lib-parser-ex-exe
  main-is: Main.hs
  other-modules:
      Paths_ghc_lib_parser_ex
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ghc-lib-parser-ex
  default-language: Haskell2010

test-suite ghc-lib-parser-ex-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_ghc_lib_parser_ex
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ghc-lib-parser-ex
  default-language: Haskell2010
